@@ -11,7 +11,7 @@
  * ********************************************************** */
 
 /* test if a disk with its poles at the first two points bounds the last two points. */
-static zDisk2D *_zBDiskTest2(zDisk2D *bd, zVec2D *v1, zVec2D *v2, zVec2D *v3, zVec2D **vp)
+static zDisk2D *_zBDisk2DTest2(zDisk2D *bd, zVec2D *v1, zVec2D *v2, zVec2D *v3, zVec2D **vp)
 {
   zDisk2DFrom2( bd, v1, v2 );
   if( !zDisk2DPointIsInside( bd, v3, true ) ) return NULL;
@@ -22,7 +22,7 @@ static zDisk2D *_zBDiskTest2(zDisk2D *bd, zVec2D *v1, zVec2D *v2, zVec2D *v3, zV
 }
 
 /* a circum disk of the three points. */
-static zDisk2D *_zBDiskTest3(zDisk2D *bd, zVec2D *v1, zVec2D *v2, zVec2D *v3, zVec2D **vp)
+static zDisk2D *_zBDisk2DTest3(zDisk2D *bd, zVec2D *v1, zVec2D *v2, zVec2D *v3, zVec2D **vp)
 {
   zDisk2DFrom3( bd, v1, v2, v3 );
   if( vp ){
@@ -32,17 +32,17 @@ static zDisk2D *_zBDiskTest3(zDisk2D *bd, zVec2D *v1, zVec2D *v2, zVec2D *v3, zV
 }
 
 /* bounding disk of the three points. */
-static int _zBDisk3(zDisk2D *bd, zVec2D *v[], zVec2D **vp)
+static int _zBDisk2D3(zDisk2D *bd, zVec2D *v[], zVec2D **vp)
 {
-  if( _zBDiskTest2( bd, v[0], v[1], v[2], vp ) ||
-      _zBDiskTest2( bd, v[1], v[2], v[0], vp ) ||
-      _zBDiskTest2( bd, v[2], v[0], v[1], vp ) ) return 2;
-  _zBDiskTest3( bd, v[0], v[1], v[2], vp );
+  if( _zBDisk2DTest2( bd, v[0], v[1], v[2], vp ) ||
+      _zBDisk2DTest2( bd, v[1], v[2], v[0], vp ) ||
+      _zBDisk2DTest2( bd, v[2], v[0], v[1], vp ) ) return 2;
+  _zBDisk2DTest3( bd, v[0], v[1], v[2], vp );
   return 3;
 }
 
 /* bounding disk of up to three points. */
-static int _zBDiskPrim(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
+static int _zBDisk2DPrim(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
 {
   zVec2D *v[3];
 
@@ -65,7 +65,7 @@ static int _zBDiskPrim(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
     v[0] = zListTail(pl)->data;
     v[1] = zListCellNext(zListTail(pl))->data;
     v[2] = zListHead(pl)->data;
-    return _zBDisk3( bd, v, vp );
+    return _zBDisk2D3( bd, v, vp );
   default:
     ZRUNERROR( ZEO_ERR_FATAL );
   }
@@ -74,18 +74,18 @@ static int _zBDiskPrim(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
 
 /* a recursive procedure to find bounding disk of two sets of points,
  * where the latter is the set of those on the surface of the disk. */
-static int _zBDiskInc(zDisk2D *bd, zVec2DList *pl, zVec2DList *shell, zVec2D **vp)
+static int _zBDisk2DInc(zDisk2D *bd, zVec2DList *pl, zVec2DList *shell, zVec2D **vp)
 {
   zVec2DListCell *cp;
   int num;
 
   if( zListIsEmpty(pl) || zListSize(shell) == 3 )
-    return _zBDiskPrim( bd, shell, vp );
+    return _zBDisk2DPrim( bd, shell, vp );
   zListDeleteTail( pl, &cp );
-  num = _zBDiskInc( bd, pl, shell, vp );
+  num = _zBDisk2DInc( bd, pl, shell, vp );
   if( !zDisk2DPointIsInside( bd, cp->data, true ) ){
     zListInsertTail( shell, cp );
-    num = _zBDiskInc( bd, pl, shell, vp );
+    num = _zBDisk2DInc( bd, pl, shell, vp );
     zListPurge( shell, cp );
   }
   zListInsertTail( pl, cp );
@@ -93,7 +93,7 @@ static int _zBDiskInc(zDisk2D *bd, zVec2DList *pl, zVec2DList *shell, zVec2D **v
 }
 
 /* a recursive procedure to find bounding disk of a list of 2D points. */
-static int _zBDiskPL(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
+static int _zBDisk2DPL(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
 {
   zVec2DList shell;
   zVec2DListCell *cp;
@@ -101,12 +101,12 @@ static int _zBDiskPL(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
 
   zListInit( &shell );
   if( zListSize(pl) <= 3 )
-    return _zBDiskPrim( bd, pl, vp );
+    return _zBDisk2DPrim( bd, pl, vp );
   zListDeleteTail( pl, &cp );
-  num = _zBDiskPL( bd, pl, vp );
+  num = _zBDisk2DPL( bd, pl, vp );
   if( !zDisk2DPointIsInside( bd, cp->data, true ) ){
     zListInsertTail( &shell, cp );
-    num = _zBDiskInc( bd, pl, &shell, vp );
+    num = _zBDisk2DInc( bd, pl, &shell, vp );
     zListPurge( &shell, cp );
   }
   zListInsertTail( pl, cp );
@@ -114,18 +114,18 @@ static int _zBDiskPL(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
 }
 
 /* bounding disk of a list of 2D points. */
-int zBDiskPL(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
+int zBDisk2DPL(zDisk2D *bd, zVec2DList *pl, zVec2D **vp)
 {
-  return _zBDiskPL( bd, pl, vp );
+  return _zBDisk2DPL( bd, pl, vp );
 }
 
 /* bounding disk of 2D points. */
-int zBDisk(zDisk2D *bd, zVec2D p[], int num, zVec2D **vp)
+int zBDisk2D(zDisk2D *bd, zVec2D p[], int num, zVec2D **vp)
 {
   zVec2DAddrList pl;
 
   if( !zVec2DAddrListCreate( &pl, p, num ) ) return 0;
-  num = zBDiskPL( bd, &pl, vp );
+  num = zBDisk2DPL( bd, &pl, vp );
   zVec2DAddrListDestroy( &pl );
   return num;
 }
